--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,12 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--<script>
+    <script>
       document.addEventListener('contextmenu', function(event) {
         event.preventDefault();
       });
-    </script>-->
-
+    </script>
+    <script src="%PUBLIC_URL%/scripts/particles.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
