--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script>
+    <!--<script>
       document.addEventListener('contextmenu', function(event) {
         event.preventDefault();
       });
-    </script>
+    </script>-->
     <script src="%PUBLIC_URL%/scripts/particles.js"></script>
   </body>
 </html>
