contact me email function created

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <meta name="owner" content="Ravindu Kaushalya">
     <meta
       name="description"
-      content="I'm still studying on Institute of software Engineering and I'm into Fullstack Developer"
+      content="I'm undergraduate at the London Metropolitan University (UK). and I'm into Fullstack Developer"
     />
-    <meta name="keywords" content="Ravindu,ravindu,Kaushalya,Web Designer,Fullstack Developer,Backend Developer">
+    <meta name="keywords" content="Ravindu,ravindu,Kaushalya,Web Designer,Web Developer,Fullstack Developer,Backend Developer">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/myLogo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Portfolio | Ravindu Kaushalya</title>
@@ -20,11 +20,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--<script>
+    <script>
       document.addEventListener('contextmenu', function(event) {
         event.preventDefault();
       });
-    </script>-->
+    </script>
     <script src="%PUBLIC_URL%/scripts/particles.js"></script>
   </body>
 </html>
