prfile photo update

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       name="description"
       content="I'm undergraduate at the London Metropolitan University (UK). and I'm into Fullstack Developer"
     />
-    <meta name="keywords" content="Ravindu,ravindu,Kaushalya,Web Designer,Web Developer,Fullstack Developer,Backend Developer">
+    <meta name="keywords" content="Ravindu,ravindu,Kaushalya,Web Designer,Web Developer,Fullstack Developer,Backend Developer,Ravindu Kaushalya">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/myLogo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Portfolio | Ravindu Kaushalya</title>
